[package]
name = "fpe"
version = "0.2.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Format-preserving encryption"
documentation = "https://docs.rs/fpe/"
homepage = "https://github.com/str4d/fpe"
repository = "https://github.com/str4d/fpe"

[dependencies]
aes = "0.5"
byteorder = "1"
num-bigint = "0.3"
num-integer = "0.1"
num-traits = "0.2"

[dev-dependencies]
aes-old = { package = "aes", version = "0.3" }
binary-ff1 = "0.1"
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[[bench]]
name = "ff1"
harness = false
