[package]
name = "fpe"
version = "0.4.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Format-preserving encryption"
documentation = "https://docs.rs/fpe/"
homepage = "https://github.com/str4d/fpe"
repository = "https://github.com/str4d/fpe"

[dependencies]
block-modes = { version = "0.8", default-features = false }
cipher = "0.3"
libm = "0.2"

num-bigint = { version = "0.4", optional = true }
num-integer = { version = "0.1", optional = true }
num-traits = { version = "0.2", optional = true }

[dev-dependencies]
aes = "0.7"
#aes-old = { package = "aes", version = "0.3" }
#binary-ff1 = "0.1"
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[features]
default = ["alloc"]
alloc = ["num-bigint", "num-integer", "num-traits"]

[[bench]]
name = "ff1"
harness = false
