[package]
name = "fpe"
version = "0.5.1"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
license = "MIT/Apache-2.0"
edition = "2018"
description = "Format-preserving encryption"
documentation = "https://docs.rs/fpe/"
homepage = "https://github.com/str4d/fpe"
repository = "https://github.com/str4d/fpe"
keywords = ["ff1"]
categories = ["cryptography", "no-std"]

[dependencies]
block-modes = { version = "0.8", default-features = false }
cipher = "0.3"
libm = "0.2"

num-bigint = { version = "0.4", optional = true, default-features = false }
num-integer = { version = "0.1", optional = true, default-features = false }
num-traits = { version = "0.2", optional = true, default-features = false }

[dev-dependencies]
aes = "0.7"

# Tests
proptest = "1.1"

#aes-old = { package = "aes", version = "0.3" }
#binary-ff1 = "0.1"
criterion = "0.3"
criterion-cycles-per-byte = "0.1"

[features]
default = ["alloc"]
alloc = ["num-bigint", "num-integer", "num-traits"]

[[bench]]
name = "ff1"
harness = false
